<resources>
    <string name="app_name">ThymeSaver</string>
    <string name="accept">ACCEPT</string>
    <string name="decline">DECLINE</string>
    <string name="create_new_sub_recipe">Create new sub-recipe</string>
    <string name="add_sub_recipe">Add sub-recipe</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="remove">REMOVE</string>
    <string name="add_person">Add Person</string>
    <string name="done">DONE</string>
    <string name="is_bulk_ingredient">Is bulk ingredient?</string>
    <string name="ingredient_name">INGREDIENT NAME</string>
    <string name="category">CATEGORIES</string>
    <string name="quantity">QUANTITY</string>
    <string name="unit">UNIT</string>
    <string name="step">STEP</string>
    <string name="decrement">Decrement</string>
    <string name="increment">Increment</string>
    <string name="email_address">Email Address</string>
    <string name="sign_up_in_with_email">Sign up/in with email</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="leave">LEAVE</string>
    <string name="expand_pantry">Expand Pantry</string>
    <string name="name">NAME</string>
    <string name="nothing_to_see_here_yet">Nothing to see here yet!</string>
    <string name="add">ADD</string>
    <string name="ingredient_name_required">Ingredient name required.</string>
    <string name="ingredient_category_required">Ingredient category required.</string>
    <string name="recipe_quantity_required">Recipe quantity required.</string>
    <string name="incorrect_number_format">Incorrect number format.</string>
    <string name="add_sub_recipes">Add Sub-Recipes</string>
    <string name="create_new_recipe">Create New Recipe</string>
    <string name="create">Create</string>
    <string name="recipe_exists_error">A recipe of that name already exists.</string>
    <string name="sure_remove_subrecipe">Are you sure you want to remove this subrecipe?</string>
    <string name="recipe_ingredient_restored">Recipe ingredient restored.</string>
    <string name="undo">UNDO</string>
    <string name="step_removed">Step removed from recipe.</string>
    <string name="step_restored">Recipe step restored.</string>
    <string name="manage_pantries">Manage Pantries</string>
    <string name="request_join_pantry">Request to Join a Pantry</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="join_request_sent">Pantry join request sent.</string>
    <string name="preferred_pantry_updated">Preferred pantry updated.</string>
    <string name="leave_pantry">Leave pantry?</string>
    <string name="remove_follower">Remove follower?</string>
    <string name="add_scheduled_meals">Add Scheduled Meals</string>
    <string name="join_request_accepted">Join request accepted!</string>
    <string name="join_request_declined">Join request declined.</string>
    <string name="meal_planner">Meal Planner</string>
    <string name="cookbook">Cookbook</string>
    <string name="pantry">Pantry</string>
    <string name="shopping_list">Shopping List</string>
    <string name="database_error">A database error occurred.</string>
    <string name="add_ingredient_pantry">Add Ingredient to Pantry?</string>
    <string name="refresh_shopping_list">Refresh Shopping List?</string>
    <string name="import_recipe">Import recipe</string>
    <string name="create_recipe">Create recipe</string>
    <string name="recipe_url">RECIPE URL</string>
    <string name="search">Search</string>
    <string name="delete">DELETE</string>
    <string name="get_cooking">GET COOKING</string>
    <string name="none_found">We couldn\'t find any ingredients :(</string>

    <string-array name="ingredient_categories">
        <item>Produce</item>
        <item>Protein</item>
        <item>Dry Goods</item>
        <item>Canned Goods</item>
        <item>Spices</item>
        <item>Sauces</item>
        <item>Misc</item>
    </string-array>

    <string-array name="ingredient_units">
        <item>Grams</item>
        <item>Ounces</item>
        <item>Pounds</item>
        <item>Tablespoons</item>
        <item>Teaspoons</item>
        <item>Cups</item>
    </string-array>

    <string-array name="recipe_categories">
        <item>Entrees</item>
        <item>Breakfast</item>
        <item>Salads</item>
        <item>Sides</item>
        <item>Desserts</item>
        <item>Snacks</item>
        <item>Drinks</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_for_recipes">Search for Recipes</string>
    <string name="find_recipes">Find Recipes</string>
    <string name="edit_recipe">Edit recipe</string>
    <string name="clear_checkboxes">Clear checkboxes</string>
</resources>
